# bachelor-thesis--sw-metrics

./: README.TXT  doxygen.cfg  src.cpp  sw_metrics.xsl
doc/html/: _a_s_t_m_8h-source.html  _a_s_t_m_8h.html  _access_kind_8h-source.html  _access_kind_8h.html  _actual_parameter_8h-source.html  _add_8h-source.html  (+719 more)
src/: CMakeLists.txt  config.h  main.cpp
src/ASTM/: ASTM.h  AccessKind.cpp  AccessKind.h  ActualParameter.cpp  ActualParameter.h  Add.cpp  Add.h  AddressOf.cpp  AddressOf.h  AggregateExpression.cpp  AggregateExpression.h  AggregateScope.cpp  AggregateScope.h  AggregateType.cpp  AggregateType.h  AggregateTypeDefinition.cpp  AggregateTypeDefinition.h  And.cpp  And.h  AnnotationExpression.cpp  AnnotationExpression.h  AnnotationType.cpp  AnnotationType.h  ArrayAccess.cpp  ArrayAccess.h  ArrayReference.cpp  ArrayReference.h  ArrayType.cpp  ArrayType.h  Assign.cpp  Assign.h  Auto.cpp  Auto.h  BinaryExpression.cpp  BinaryExpression.h  BinaryOperator.cpp  BinaryOperator.h  BitAnd.cpp  BitAnd.h  BitFieldDefinition.cpp  (+320 more)
src/Frontends/C++/: ActualParsingUnit.cpp  ActualParsingUnit.h  CppParser.cpp  CppParser.h  cpp.l  cpp.ypp  editor.sh
src/Modules/: ModuleApi.cpp  ModuleApi.h  ModuleBase.cpp  ModuleBase.h
src/Modules/CCN/: CCN.cpp  CCN.h
src/Modules/COMMDENS/: COMMDENS.cpp  COMMDENS.h
src/Modules/DECDENS/: DECDENS.cpp  DECDENS.h
src/Modules/LK/: LK.cpp  LK.h
src/Modules/LOC/: LOC.cpp  LOC.h
src/Modules/NOC/: NOC.cpp  NOC.h
src/Modules/NPATH/: NPATH.cpp  NPATH.h
src/Modules/TFC/: TFC.cpp  TFC.h
test/: checker.xsl
text/: reference.bib  thesis.tex
(+16 files in other folders)
